image-server-jfall1/service_python_jfall2.yaml
kind: Service
apiVersion: v1
metadata:
  name: python-conduit-jfall2
  labels:
    app: python-conduit-jfall2
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: python-conduit-jfall2
    deploymentconfig: python-conduit-jfall2
