image-server-jfall1/route_vuejs.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  host: frontend.apps.jfall1.rhtesting.nl
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
status:
  ingress:
    - host: frontend.apps.jfall1.rhtesting.nl
